// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseListItem.vue should match compact view snapshot 1`] = `
<div class="container pa-1 fluid">
  <div class="v-card theme--light">
    <div class="layout pa-2 bli-ribbon-style row align-start" style="border-left-color: black;"><i aria-hidden="true" class="v-icon material-icons theme--light">assignment</i>
      <div class="flex mx-2 align-self-center">
        <div class="flex title font-weight-regular">
          <div class="v-card__title pa-0">
            Note1
            <button type="button" class="ma-0 v-btn v-btn--absolute v-btn--flat v-btn--icon v-btn--right v-btn--small theme--light black--text" style="display: none;">
              <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light" style="font-size: 16px;">close</i></div>
            </button></div>
        </div>
        <!---->
        <!---->
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`BaseListItem.vue should match full view snapshot 1`] = `
<div class="container pa-1 fluid">
  <div class="v-card theme--light">
    <div class="layout pa-2 bli-ribbon-style row align-start" style="border-left-color: black;"><i aria-hidden="true" class="v-icon material-icons theme--light">assignment</i>
      <div class="flex mx-2 align-self-center">
        <div class="flex title font-weight-regular">
          <div class="v-card__title pa-0">
            Note1
            <button type="button" class="ma-0 v-btn v-btn--absolute v-btn--flat v-btn--icon v-btn--right v-btn--small theme--light black--text" style="display: none;">
              <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light" style="font-size: 16px;">close</i></div>
            </button></div>
        </div>
        <hr class="my-2 v-divider theme--light">
        <div text-truncate="" class="v-card__text ml-1 pa-0">random desc</div>
        <div class="v-card__text pa-0"><span tabindex="0" class="v-chip v-chip--label v-chip--small theme--light primary white--text"><span class="v-chip__content">Lesson1</span></span><span tabindex="0" class="v-chip v-chip--label v-chip--small theme--light primary white--text"><span class="v-chip__content">Lesson2</span></span></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BaseListItem.vue should match new view snapshot 1`] = `
<div class="container pa-1 fluid">
  <div class="v-card v-card--flat v-card--tile theme--light">
    <div class="v-card__actions bli-new--border pa-0"><button type="button" class="bli-new--height px-0 v-btn v-btn--block v-btn--flat theme--light">
        <div class="v-btn__content"><i aria-hidden="true" class="v-icon material-icons theme--light">note_add</i>
          Note1
        </div>
      </button></div>
  </div>
</div>
`;
